# FlowAegis

./: .gitignore copy  Cargo.toml  README.md  config.toml  rules.toml
.github/workflows/: rust-CI.yaml
.github/workflows  /: rust-CI.yaml
aegis/: Cargo.toml  allow.help.arg  build.rs  deny.help.arg  forward.help.arg  import.help.arg  main.help.arg  proxy.help.arg
aegis/src/: args.rs  ebpf.rs  main.rs  network.rs  proxy.rs
aegis/src/error/: mod.rs
aegis/src/rule/: mod.rs
ebpf/common/: Cargo.toml
ebpf/common/src/: lib.rs  rule.rs
ebpf/core/: Cargo.toml  build.rs
ebpf/core/src/: cgroups.rs  main.rs  sched.rs
