[workspace]
members = ["aegis", "ebpf/core", "ebpf/common"]
default-members = ["aegis"]

resolver = "2"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
anyhow = { version = "1", default-features = false }
which = { version = "7.0.2", default-features = false }
toml = { version = "0.8", default-features = false }
serde = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }

[profile.release.package.ebpf-core]
debug = 2
codegen-units = 1
