[workspace]
members = ["aegis", "ebpf/core", "ebpf/common"]
default-members = ["aegis"]

resolver = "2"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
anyhow = { version = "1", default-features = false }
which = { version = "7.0.2", default-features = false }
toml = { version = "0.8", default-features = false }
serde = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }
bytes = { version = "1.10.1", default-features = false }
rlimit = { version = "0.10.2", default-features = false }
env_logger = { version = "0.11.7", default-features = false }
log = { version = "0.4.26", default-features = false }
tokio-util = { version = "0.7.14", default-features = false }
futures = { version = "0.3.31", default-features = false }
proxy-stream = {version = "0.0.2",default-features = false}
[profile.release.package.ebpf-core]
debug = 2
codegen-units = 1
