[package]
name = "aegis"
version = "0.1.0"
edition = "2024"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
toml = { workspace = true, default-features = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt","rt-multi-thread","fs","io-util","signal"] }
ebpf-common = { path = "../ebpf/common" }
# heapless = "0.8.0"
# postcard = "1.1.1"
rlimit = "0.10.2"
env_logger = "0.11.7"
log = "0.4.26"
[build-dependencies]
aya-build = { workspace = true }
anyhow = { workspace = true }
