[package]
name = "aegis"
version = "0.1.0"
edition = "2024"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
toml = { workspace = true, default-features = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "io-util",
    "signal",
] }
futures = { workspace = true, default-features = false, features = ["alloc"] }
ebpf-common = { path = "../ebpf/common", features = ["user"] }
bytes = { workspace = true }
rlimit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio-util = { workspace = true, default-features = false, features = ["time"] }
proxy-stream = { workspace = true, default-features = false }

[build-dependencies]
aya-build = { workspace = true }
anyhow = { workspace = true }
