[package]
name = "aegis"
version = "0.1.0"
edition = "2024"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
bytes = { workspace = true }
clap_lex = { workspace = true, default-features = false }
ebpf-common = { path = "../ebpf/common", features = ["user"] }
env_logger = { workspace = true }
futures = { workspace = true, default-features = false, features = ["alloc"] }
log = { workspace = true }
procfs = { workspace = true, default-features = false }
proxy-stream = { workspace = true, default-features = false }
rlimit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true, default-features = false }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "io-util",
    "signal",
] }
tokio-util = { workspace = true, default-features = false, features = ["time"] }
toml = { workspace = true, default-features = true }
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
