[package]
name = "ebpf-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
ebpf-common = { path = "../common" }
# postcard = "1.1.1"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ebpf"
path = "src/main.rs"