[package]
name = "ebpf-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
ebpf-common = { path = "../common" }
# network-types = "0.0.7"
[build-dependencies]
which = { workspace = true }
# aya-tool = { git = "https://github.com/aya-rs/aya", branch = "main" }

[[bin]]
name = "ebpf"
path = "src/main.rs"
